# serializer version: 1
# name: test_all_entities[sensor.firefly_iii_test_defaultasset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.firefly_iii_test_defaultasset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'defaultAsset',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'account_role',
    'unique_id': 'None_2_account_role',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.firefly_iii_test_my_checking_account-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.firefly_iii_test_my_checking_account',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:account-cash',
    'original_name': 'My checking account',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'account_balance',
    'unique_id': 'None_2_account_balance',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.firefly_iii_test_my_checking_account-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Firefly III test My checking account',
      'icon': 'mdi:account-cash',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.firefly_iii_test_my_checking_account',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123.45',
  })
# ---
